# visualizer

./: Cargo.toml
src/: fft_data.rs  lib.rs  load_audio.rs  main.rs  visualizer.rs
src/filters/: a_weighting.rs  eq_curve.rs  exponential.rs  gaussian.rs  manager.rs  mod.rs  registry.rs
src/filters/spatial/: a_weighting.rs  eq_curve.rs  gaussian.rs  mod.rs
src/filters/temporal/: attackrelease.rs  exponential.rs  mod.rs  peakholddecay.rs
src/frontend/: egui_vis.rs  mod.rs
src/frontend/bevy_frontend/: bevy_vis.rs
src/frontend/egui_frontend/: egui_vis.rs  mod.rs  ui_components.rs
