[package]
name = "visualizer"
version = "0.1.0"
edition = "2024"

[dependencies]
cpal = "0.16.0"
eframe = "0.33.0"
egui = "0.33.0"
egui_plot = "0.34.0"
spectrum-analyzer = "1.7.0"
symphonia = "0.5.5"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
